<resources>
    <string name="app_name">PANDD</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="upload_profile_picture">Upload profile picture</string>
    <string name="signup">Signup</string>
    <string name="promo_and_or_discount_description">Promo and/or discount description</string>
    <string name="upload_image">Upload image</string>
    <string name="store">Store:</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="product_featured_in_promo_discount">Product featured in promo/discount</string>
    <string name="app_label">PANDD</string>
    <string name="search_hint">Search by product...</string>
    <string name="take_photo">Take photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="name">Store name:</string>
    <string name="address">Address:</string>
    <string name="google_maps_id">Google maps ID:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="search_posts">Search posts</string>
    <string name="subscribe">Subscribe</string>
    <string name="notify_me">Notify me</string>
    <string name="expiring_date">Expiring date</string>
    <string name="stopNotify">Stop notifying me</string>
    <string name="notify">Notify me</string>
</resources>