<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="300dp"
    tools:context=".StoreInfo"
    android:background="@color/white"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/logo_white"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:background="@color/base"
        android:contentDescription="@string/app_name" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="12sp"
        android:textColor="@color/base"
        android:textStyle="bold"
        android:text="@string/name"/>
    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="12sp"
        android:textColor="@color/base"
        android:textStyle="bold"
        android:text="@string/address"/>
    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/address"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="12sp"
        android:textColor="@color/base"
        android:textStyle="bold"
        android:text="@string/google_maps_id"/>
    <TextView
        android:id="@+id/tvMapId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/google_maps_id"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/base"
        android:text="@string/coordinates"/>
    <TextView
        android:id="@+id/tvCoordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/coordinates"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/base"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:text="@string/notify_me"/>
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/base"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:text="@string/search_posts"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>